Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,7 @@ stages:
         TargetPath: '$(System.DefaultWorkingDirectory)'
 
 - stage: LHF_Publish_Dev
-  dependsOn: Build
+  dependsOn: LHF_Build
   jobs:
   - deployment: Dev
     environment: 'dev'
